changes ecosystem from grunt to gulp

--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
     "private" : true,
 
     "devDependencies" : {
-        "grunt" :                       "~0.4.0",
-        "grunt-contrib-cssmin":         "*",
-
-        "grunt-contrib-sass":           "*",
-        "grunt-contrib-uglify":         "*",
-        "grunt-contrib-watch":          "*",
-        "grunt-contrib-concat":         "*",
-        "grunt-text-replace":           "*", 
-        "grunt-cssc":                   "*",
-        "grunt-htmlhint":               "*",
-        "matchdep":                     "*",
-        "grunt-glsl-threejs":           "*"
+        "gulp": "*",
+        "gulp-resolve-dependencies": "*",
+        "gulp-concat": "*",
+        "gulp-replace": "*",
+        "gulp-rename": "*",
+        "gulp-uglify": "*",
+        "browserify": "*",
+        "q": "*"
     }
 }
