--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 .codeintel
-.sass-cache
 .sublime-grunt.cache
 dionysiusmarquis.sublime-project
 dionysiusmarquis.sublime-workspace
 node_modules
+bak
