--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name" : "dionysiusmarquis",
+    "name" : "dionysiusmarquis-js-lib",
     "version" : "0.1.0",
     "author" : "Dionysius Marquis",
     "private" : true,
